<resources>
    <string name="app_name">PlutusApp</string>
    <string name="amount_jd">Amount (JD)</string>
    <string name="withdraw">Withdraw</string>
    <string name="confirm">Confirm</string>
    <string name="how_much_do_you_want">Select your amount</string>
    <string name="title_activity_login">log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logIn">Log In</string>
    <string name="shopName">Shop Name</string>
    <string name="shopTele">Shop Tele</string>
    <string name="shopLocation">Shop Location</string>
    <string name="shopType">Shop Type</string>
    <string name="SighnUp">Sighn Up</string>
    <string name="customerName">Customer Name</string>
    <string name="customerTele">Customer Tele</string>
    <string name="customerage">customerAge</string>
    <string name="barcode">Barcode</string>
    <string name="qr_barcode">QR Barcode</string>
    <string name="amount">Amount</string>
    <string name="date_and_time">Date and time</string>
    <string name="valid_for">Valid for</string>
    <string name="title_activity_maps">Map</string>
    <string name="or_choose_freely">OR choose freely</string>
    <string name="choose_payment_method">Choose payment method</string>
</resources>