<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/darkGray"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WithdrawPage">

        <TextView
            android:id="@+id/withdraw_header"
            android:onClick="@{clickHandler::onWithdrawClicked}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/withdraw"
            android:paddingBottom="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/darkOrange"
            android:textSize="20sp"
            app:fontFamily="sans-serif-condensed-medium"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_baseline_bubble"
            android:drawableLeft="@drawable/ic_baseline_bubble" />


        <LinearLayout
            android:visibility="visible"
            android:id="@+id/withdraw_linear_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shadow_background"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/withdraw_barcode_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/fill_color_background"
                    android:gravity="center"
                    android:text="@string/barcode"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="16sp"
                    />

                <TextView

                    android:id="@+id/withdraw_qrbarcode_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/qr_barcode"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:padding="15dp"
                android:background="@drawable/edit_bac_main_bu"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/withdraw_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:src="@drawable/barcode"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/amount"
                    android:textColor="@color/lightWhite"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:text="5 JD"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:text="@string/date_and_time"
                    android:textColor="@color/lightWhite"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:text="3:45PM ~ 18/10/2020"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:text="@string/valid_for"
                    android:textColor="@color/lightWhite"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="5dp"
                    android:text="15 min"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-condensed-medium"/>
            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

