<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:orientation="vertical"
    tools:context=".SighnUpCustomer">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:layout_weight="2">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/customerName"
                android:textColor="@color/darkOrange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tax_services2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/customerTele"
                android:textColor="@color/darkOrange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tax_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/customerage"
                android:textColor="@color/darkOrange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tax_services331"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/shopType"
                android:textColor="@color/darkOrange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tax_services33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tax_services323"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext"
            android:elevation="2dp"
            android:visibility="invisible"
            android:gravity="center"
             android:padding="5dp"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />


    </LinearLayout>
    <Button
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login"
        android:text="@string/SighnUp"

        />

</LinearLayout>